--- a/Qt5/classic_cryptography/graph-webkit-dep.html
+++ b/Qt5/classic_cryptography/graph-webkit-dep.html
@@ -6,53 +6,74 @@
        <meta charset="utf-8">
    </head>
    <body style="height: 80%; margin: 0">
-       <div id="container" style="height: 100%"></div>
+       <div id="container" style="height: 100%;width: 100%"></div>
        <script src="echarts.js"></script>
        <script type="text/javascript">
-var dom = document.getElementById("container");
-var myChart = echarts.init(dom,'dark');
-var app = {};
-option = null;
-myChart.showLoading();
-$.getJSON('webkit-dep.json', function (webkitDep) {
-    myChart.hideLoading();
 
-    option = {
-        legend: {
-            data: ['HTMLElement', 'WebGL', 'SVG', 'CSS', 'Other']
-        },
-        series: [{
-            type: 'graph',
-            layout: 'force',
-            animation: false,
-            label: {
-                normal: {
-                    position: 'right',
-                    formatter: '{b}'
-                }
-            },
-            draggable: true,
-            data: webkitDep.nodes.map(function (node, idx) {
-                node.id = idx;
-                return node;
-            }),
-            categories: webkitDep.categories,
-            force: {
-                // initLayout: 'circular'
-                // repulsion: 20,
-                edgeLength: 5,
-                repulsion: 20,
-                gravity: 0.2
-            },
-            edges: webkitDep.links
-        }]
-    };
+$(function(){
+showcharts();
+setInterval(function(){
+showcharts();
+}, 3000);
+});
 
-    myChart.setOption(option);
-});;
-if (option && typeof option === "object") {
-    myChart.setOption(option, true);
+
+function showcharts(){
+  var dom = document.getElementById("container");
+  var myChart = echarts.init(dom,'dark');
+  var app = {};
+  option = null;
+  // myChart.showLoading();
+  myChart.hideLoading();
+  $.getJSON('webkit-dep.json', function (webkitDep) {
+      myChart.hideLoading();
+
+      option = {
+          legend: {
+              data: ['HTMLElement', 'WebGL', 'SVG', 'CSS', 'Other']
+          },
+          series: [{
+              type: 'graph',
+              layout: 'force',
+              animation: false,
+              label: {
+                  normal: {
+                      position: 'right',
+                      formatter: '{b}'
+                  }
+              },
+              draggable: true,
+              data: webkitDep.nodes.map(function (node, idx) {
+                  node.id = idx;
+                  return node;
+              }),
+              categories: webkitDep.categories,
+              force: {
+                  // initLayout: 'circular'
+                  // repulsion: 20,
+                  edgeLength: 5,
+                  repulsion: 20,
+                  gravity: 0.2
+              },
+              edges: webkitDep.links
+          }]
+      };
+
+      myChart.setOption(option);
+  });;
+  if (option && typeof option === "object") {
+      myChart.setOption(option, true);
+  }
+
 }
+
+
+
+
+
+
+
+
        </script>
    </body>
 </html>
